syntax = "proto3";

option csharp_namespace = "Feature";

package Feature;

service FeatureService {
  rpc GetAll (FeatureRequest) returns (FeatureReply) {}
}

message FeatureRequest {
  string page_number = 1;
}

message FeatureReply {
  repeated FeatureEntity features = 1;
}

message FeatureEntity {
	int32 id = 1;
	string title = 2;
	string created = 3; 
}
